cmake_minimum_required(VERSION 3.6)

project(mrpc)

# add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_001)
# add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_002)
add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_003)
# add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_004)
# add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_005)