cmake_minimum_required(VERSION 3.6)

project(mrpc)

# add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_004)
# add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_005)

add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_100)
add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_101)
add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_102)
add_subdirectory(${CMAKE_HOME_DIRECTORY}/example/test_103)
